removed google authentication